fix the gap header

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header {
 .nav-bar,
 .nav-bar a {
   display: flex;
-  gap: 30px;
+  gap: 29.6px;
   font-weight: 400;
   font-size: 18px;
   text-transform: capitalize;
